= Change Log
All notable changes to this project will be documented in this file.

== [Unreleased]

=== Added

* Added the benchmarking module to
** log the times of tests
** Allow failing a test if it takes too long
* Test suites as a data object
* Ability to contain a test suite within another suite
* Ability to prefix `MatcherAssertion` descriptions with custom messaging.

=== Changed

* Allow override of `JavaFire` `testRunners` property at commandline level
* Documentation is now generated by asciidoctor and snippits are generated from tests
* Extracted `onTestCompletion` and `onRunCompletion` to their own separate functional interfaces
* Altered eventual consistency defaults to be quicker and more reasonable
* `TestSuite` interface to `TestSuiteClass`
* Handle suite results and single test results separately

=== Removed

* Custom suite names on `TestSuiteClass`, this is no longer necessary since you can directly create a suite.

== [0.1.0] - 2019-06-09

First version of library