@@ -4,10 +4,11 @@ import io.github.olib963.javatest.TestResults;
 import io.github.olib963.javatest.TestRunCompletionObserver;
 
 import java.io.PrintStream;
+import java.util.stream.Collectors;
 
 public class RunLoggingObserver implements TestRunCompletionObserver {
 
-    public static final String SEPARATOR = System.lineSeparator();
+
     public static final TestRunCompletionObserver INSTANCE = new RunLoggingObserver(System.out);
 
     private final PrintStream stream;
@@ -18,9 +19,14 @@ public class RunLoggingObserver implements TestRunCompletionObserver {
 
     @Override
     public void onRunCompletion(TestResults results) {
-        stream.println("Ran a total of " + results.testCount() + " tests." + SEPARATOR
-                + results.successCount + " succeeded" + SEPARATOR
-                + results.failureCount + " failed" + SEPARATOR
-                + results.pendingCount + " were pending");
+        stream.println("Ran a total of " + results.testCount() + " tests.");
+        stream.println(results.successCount + " succeeded");
+        stream.println(results.failureCount + " failed");
+        stream.println(results.pendingCount + " were pending");
+        if (results.allLogs().count() != 0) {
+            stream.println();
+        }
+        results.allLogs().forEach(stream::println);
+
     }
 }
