@@ -26,8 +26,10 @@ public class LoggingTests implements TestSuiteClass {
 
                     var results = TestResults.from(10, 20)
                             .addResult(PENDING_TEST_RESULT)
-                            .addResult(PENDING_TEST_RESULT);
-                    var expectedLog = "Ran a total of 32 tests.\\n20 succeeded\\n10 failed\\n2 were pending\\n";
+                            .addResult(PENDING_TEST_RESULT)
+                            .addLog("A run level log");
+
+                    var expectedLog = "Ran a total of 32 tests.\\n20 succeeded\\n10 failed\\n2 were pending\\n\\nA run level log\\n";
 
                     var logger = new RunLoggingObserver(stream.printStream());
                     logger.onRunCompletion(results);
